deloyコマンドをcollectコマンドに改名し、実行ファイルを作るdeployコマンドを新規作成

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -5,20 +5,21 @@
   "main": "wwa.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run-p build:webpack:dev deploy server",
+    "start": "run-p build:webpack:dev collect server",
+    "deploy": "run-p build:webpack collect",
     "version_up:patch": "npm version patch && npm run build",
     "version_up:minor": "npm version minor && npm run build",
     "version_up:major": "npm version major && npm run build",
     "build": "npm-run-all clean build:*",
     "build:webpack": "webpack --config webpack.config.ts && webpack --config webpack.config.prod.ts",
     "build:webpack:dev": "webpack -w",
-    "deploy": "shx mkdir -p lib && npm-run-all deploy:*",
-    "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
-    "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* lib/",
-    "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
-    "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
-    "deploy:scripts": "shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
-    "deploy:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "collect": "shx mkdir -p lib && npm-run-all collect:*",
+    "collect:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
+    "collect:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* lib/",
+    "collect:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
+    "collect:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
+    "collect:scripts": "shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
+    "collect:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
     "clean": "shx rm -rf lib",
     "server": "node ./launch-server lib"
   },
