package.json に install を追加し、Netlifyビルドコマンドを短縮
もしビルドに失敗するようだったら、シェルスクリプトによる実行に切り替える

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "/"
   publish = "/packages/engine/lib"
-  command = "npm install && npm run bootstrap && npm run build && npm run deploy"
+  command = "npm run deploy"
