deploy-to-netlify を削除
シェルスクリプトが権限の都合で実行できないため

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "/"
   publish = "packages/engine/lib"
-  command = "./deploy-to-netlify.sh"
+  command = "npm install && npm run deploy"
