--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "/"
   publish = "packages/engine/lib"
-  command = "npm install && npm run deploy"
+  command = "npm install && npm run build && npm run deploy"
