--- a/packages/virtual-pad/package.json
+++ b/packages/virtual-pad/package.json
@@ -2,9 +2,10 @@
   "name": "@wwawing/virtual-pad",
   "version": "0.0.0",
   "description": "WWA Wing Virtual Pad for smaprtphone",
-  "main": "src/VirtualPad.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ."
   },
   "author": "WWA Wing Team",
   "license": "MIT"
