--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -18,5 +18,8 @@
     "node-sass": "^4.10.0",
     "shx": "^0.3.2",
     "typescript": "^3.3.3333"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
