--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -13,7 +13,8 @@
     "@wwawing/common-interface": "^0.0.0-test.9",
     "@wwawing/debug-server": "^0.0.0-test.9",
     "@wwawing/loader": "^0.0.0-test.9",
-    "@wwawing/styles": "^0.0.0-test.9"
+    "@wwawing/styles": "^0.0.0-test.9",
+    "@wwawing/engine": "0.0.0-test.9"
   },
   "publishConfig": {
     "access": "public"
