--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "prepare": "npm run build"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
