--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -4,17 +4,26 @@
   "description": "World Wide Adventure: an RPG Engine.",
   "author": "WWA Wing Team",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node ."
+  },
+  "prepare": "npm start",
   "bugs": {
     "url": "https://github.com/WWAWing/WWAWing/issues"
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@types/shelljs": "^0.8.6",
     "@wwawing/assets": "^3.2.3",
     "@wwawing/common-interface": "^3.2.3",
     "@wwawing/debug-server": "^3.2.3",
     "@wwawing/engine": "^3.2.4",
     "@wwawing/loader": "^3.2.3",
-    "@wwawing/styles": "^3.2.4"
+    "@wwawing/styles": "^3.2.4",
+    "shelljs": "^0.8.3",
+    "shx": "^0.3.2",
+    "ts-node": "^8.5.0",
+    "typescript": "^3.7.2"
   },
   "publishConfig": {
     "access": "public"
