--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "publish": {
+      "graphType": "all"
+    }
+  },
   "version": "3.2.7"
 }
