--- a/packages/html-generator/tsconfig.json
+++ b/packages/html-generator/tsconfig.json
@@ -1,22 +1,10 @@
 
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./lib",
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": [
-        "es2017",
-        "es2016",
-        "es2015",
-        "es5",
-    ],
     "strict": true,
-    "noLib": false,
-    "declaration": true,
-    "removeComments": true,
-    "experimentalDecorators": true,
     "noUnusedParameters": false,
     "noUnusedLocals": true
   },
