--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -13,7 +13,7 @@
     "clean": "npm run clean:script && npm run clean:dist",
     "clean:script": "shx rm -rf lib && shx mkdir -p lib",
     "clean:dist": "shx rm -rf output && shx mkdir -p output",
-    "prepare": "npm run build"
+    "prepare": "npm run build && npm run compile"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
