chore: 🤖 html-generator
npmignore -> package.json/files

--- a/packages/html-generator/package.json
+++ b/packages/html-generator/package.json
@@ -9,6 +9,11 @@
     "build": "tsc",
     "start": "npm run build && shx mkdir -p output && node debug/debug.js"
   },
+  "files":[
+    "lib",
+    "template",
+    "config"
+  ],
   "keywords": [
     "WWA"
   ],
