--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -14,7 +14,7 @@
     "build:webpack:dev": "webpack -w",
     "deploy": "shx mkdir -p lib && npm-run-all deploy:*",
     "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
-    "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* lib/",
+    "deploy:html": "ts-node ./debug/make-debug-pages",
     "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
     "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
     "deploy:scripts": "shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
@@ -39,6 +39,7 @@
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
+    "@types/pug": "^2.0.4",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.39.1",
     "@wwawing/assets": "^3.2.8",
@@ -48,6 +49,7 @@
     "@wwawing/styles": "^3.2.4",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
+    "pug": "^2.0.4",
     "shelljs": "^0.8.2",
     "shx": "^0.3.2",
     "ts-loader": "^4.3.0",
