--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -47,6 +47,7 @@
     "@wwawing/debug-server": "^3.2.3",
     "@wwawing/loader": "^3.2.3",
     "@wwawing/styles": "^3.2.4",
+    "@wwawing/page-generator": "3.2.4",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
     "pug": "^2.0.4",
