--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.2.8",
+  "version": "3.2.9",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
   "scripts": {
@@ -42,12 +42,12 @@
     "@types/pug": "^2.0.4",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.39.1",
-    "@wwawing/assets": "^3.2.8",
+    "@wwawing/assets": "^3.2.9",
     "@wwawing/common-interface": "^3.2.3",
     "@wwawing/debug-server": "^3.2.3",
     "@wwawing/loader": "^3.2.3",
-    "@wwawing/styles": "^3.2.4",
-    "@wwawing/page-generator": "3.2.4",
+    "@wwawing/page-generator": "^3.2.9",
+    "@wwawing/styles": "^3.2.9",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
     "pug": "^2.0.4",
