--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -48,7 +48,7 @@
     "@wwawing/loader": "^3.2.3",
     "@wwawing/page-generator": "^3.2.9",
     "@wwawing/styles": "^3.2.9",
-    "@wwawing/virtual-pad": "3.2.10",
+    "@wwawing/virtual-pad": "^3.2.10",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
     "pug": "^2.0.4",
