--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node lib debug",
     "build": "tsc -p .",
-    "generate": "mkdir -p bin && nexe --target=win32-x86-8.6.0 --cwd . --output bin/wwa-server.exe",
+    "generate": "shx mkdir -p bin && nexe --target=win32-x86-8.6.0 --cwd . --output bin/wwa-server.exe",
     "clean": "shx rm -rf debug lib bin",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "npm run build && npm run generate"
