--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/all",
-  "version": "3.2.10",
+  "version": "3.2.11",
   "description": "World Wide Adventure: an RPG Engine.",
   "author": "WWA Wing Team",
   "license": "MIT",
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@types/jszip": "^3.1.6",
     "@types/shelljs": "^0.8.6",
-    "@wwawing/assets": "^3.2.10",
-    "@wwawing/common-interface": "3.2.3",
-    "@wwawing/debug-server": "3.2.3",
-    "@wwawing/engine": "^3.2.10",
-    "@wwawing/loader": "3.2.3",
-    "@wwawing/page-generator": "^3.2.9",
-    "@wwawing/styles": "^3.2.9",
+    "@wwawing/assets": "^3.2.11",
+    "@wwawing/common-interface": "^3.2.11",
+    "@wwawing/debug-server": "^3.2.11",
+    "@wwawing/engine": "^3.2.11",
+    "@wwawing/loader": "^3.2.11",
+    "@wwawing/page-generator": "^3.2.11",
+    "@wwawing/styles": "^3.2.11",
     "jszip": "^3.2.2",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
