styles を ts-node で実行するように変更、package-lock.jsonを更新

--- a/packages/styles/tsconfig.json
+++ b/packages/styles/tsconfig.json
@@ -1,29 +1,13 @@
 {
-    "compilerOptions": {
-        "rootDir": "./src",
-        "outDir": "./lib",
-        "target": "es5",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "lib": [
-            "es2017",
-            "es2016",
-            "es2015",
-            "es5",
-            "dom"
-        ],
-        "strict": true,
-        "noLib": false,
-        "declaration": true,
-        "removeComments": true,
-        "experimentalDecorators": true,
-        "noUnusedParameters": false,
-        "noUnusedLocals": true
-    },
-    "include": [
-        "src/*.ts"
-    ],
-    "exclude": [
-        "src/*.scss"
-    ]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "rootDir": "./scripts",
+    "module": "commonjs",
+  },
+  "include": [
+      "scripts/*.ts"
+  ],
+  "exclude": [
+      "src/*.scss"
+  ]
 }
