--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -3,20 +3,15 @@
   "version": "3.3.0",
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/wwaload.js",
+  "files": [
+    "./lib"
+  ],
   "scripts": {
     "start": "run-p watch:* start:deploy server",
     "start:deploy": "shx mkdir -p lib && shx cp -R resources/* lib",
     "test": "echo \"no test specified\"",
-    "watch:worker": "webpack -w ",
-    "watch:noworker": "webpack -w --config ./webpack.config.noworker.js",
-    "server": "http-server ./lib -o",
-    "build": "npm run clean && npm run build:worker && npm run build:noworker",
-    "build:worker": "npm run build:worker:dev && npm run build:worker:prod",
-    "build:worker:dev": "webpack",
-    "build:worker:prod": "webpack --config ./webpack.config.prod.ts",
-    "build:noworker": "npm run build:noworker:dev && npm run build:noworker:prod",
-    "build:noworker:dev": "webpack --config ./webpack.config.noworker.ts",
-    "build:noworker:prod": "webpack --config ./webpack.config.prod.noworker.ts",
+    "server": "webpack && shx cp ./src/debug-resources/wwamap.dat ./debug && http-server ./debug -o",
+    "build": "npm run clean && tsc",
     "clean": "shx rm -rf lib",
     "prepare": "npm run build"
   },
@@ -30,9 +25,14 @@
     "url": "https://github.com/WWAWing/WWALoader/issues"
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
+  "dependencies": {
+    "@wwawing/event-emitter": "3.3.0"
+  },
   "devDependencies": {
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@wwawing/common-interface": "^3.3.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.0.4",
     "http-server": "^0.10.0",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.3",
