refactor(loader): EventEmitterを種類別に別クラスにした

--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -4,6 +4,7 @@
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
   "files":["lib"],
   "main": "lib/index.js",
+  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
