fix(event-emitter): 送信できないバグ修正

--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -2,6 +2,7 @@
   "name": "@wwawing/common-interface",
   "version": "3.3.0",
   "description": "",
+  "sideEffects": false,
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
