refacor(extractor): 整理

--- a/packages/loader/tsconfig.json
+++ b/packages/loader/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "ESNext",
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts", "core/loader_core.ts"
   ],
   "exclude": [
     "node_modules"
