refactor(decompressor): decoder -> decompressor

--- a/packages/loader/tsconfig.json
+++ b/packages/loader/tsconfig.json
@@ -10,6 +10,6 @@
     "src/**/*.ts", "core/loader_core.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules", "src/___debug-resources___"
   ]
 }
