fix(handler): 新しいLoaderのI/Fに対応

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -17,7 +17,6 @@
     "deploy:html": "ts-node ./debug/make-debug-pages",
     "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
     "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
-    "deploy:scripts": "shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
     "deploy:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
     "clean": "shx rm -rf lib",
     "server": "node ./launch-server lib",
@@ -45,6 +44,7 @@
     "@wwawing/assets": "^3.3.0",
     "@wwawing/common-interface": "^3.3.0",
     "@wwawing/debug-server": "^3.3.0",
+    "@wwawing/event-emitter": "^3.3.0",
     "@wwawing/loader": "^3.3.0",
     "@wwawing/page-generator": "^3.3.0",
     "@wwawing/styles": "^3.3.0",
