--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -3,6 +3,7 @@
   "version": "3.3.0",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
+  "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-p build:webpack:dev deploy server",
