--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   base = "/"
   publish = "packages/engine/lib"
-  command = "npm install && npm run deploy"
+  command = "npm run deploy"
   ignore = "git diff --quiet HEAD^ HEAD packages/engine/"
