perf(engine): rootのnpm run buildをproductionのみに

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -6,13 +6,13 @@
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run-p build:webpack:dev deploy server",
+    "start": "run-p build:dev deploy server",
     "version_up:patch": "npm version patch && npm run build",
     "version_up:minor": "npm version minor && npm run build",
     "version_up:major": "npm version major && npm run build",
-    "build": "npm-run-all clean build:*",
-    "build:webpack": "webpack --config webpack.config.ts && webpack --config webpack.config.prod.ts",
-    "build:webpack:dev": "webpack -w",
+    "build": "npm-run-all clean build:prod",
+    "build:prod": "webpack --config webpack.config.prod.ts",
+    "build:dev": "webpack -w",
     "deploy": "shx mkdir -p lib && npm-run-all deploy:*",
     "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
     "deploy:html": "ts-node ./debug/make-debug-pages",
