--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap:no-hoist": "lerna bootstrap",
     "clean": "lerna clean --yes",
     "start": "lerna run start --stream --scope @wwawing/engine",
-    "build": "lerna run build --stream --parallel",
+    "build": "lerna run build --stream",
     "deploy": "lerna run deploy --scope @wwawing/engine",
     "generate": "lerna exec --scope @wwawing/debug-server -- npm run generate",
     "make-dist": "npm run build && lerna run make-dist --stream",
