--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -5,7 +5,9 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "sideEffects": ["./**/*.html", "./**/*.dat"],
-  "files": [    "./lib"  ],
+  "files": [
+    "./lib"
+  ],
   "scripts": {
     "start": "run-p watch:* start:deploy server",
     "start:deploy": "shx mkdir -p lib && shx cp -R resources/* lib",
