--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "npm run bootstrap",
     "bootstrap": "lerna bootstrap --hoist",
+    "bootstrap:netlify": "echo \"test\" && lerna --help && test -e ./packages/all/dist || run-s bootstrap",
     "bootstrap:no-hoist": "lerna bootstrap",
     "clean": "lerna clean --yes",
     "start": "lerna run start --stream --scope @wwawing/engine",
@@ -31,11 +32,10 @@
     "url": "https://github.com/WWAWing/WWAWing/issues"
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
-  "lerna": "^3.13.1",
   "npm-run-all": "^4.1.3",
   "devDependencies": {
     "@types/node": "^12.12.6",
-    "lerna": "^3.18.2",
+    "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
     "ts-node": "^8.8.2",
     "typescript": "^3.7.2"
