--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
     "@types/pug": "^2.0.4",
-    "@types/uglifyjs-webpack-plugin": "^1.1.0",
+    "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.39.1",
     "@wwawing/assets": "^3.3.0",
     "@wwawing/common-interface": "^3.3.0",
@@ -54,11 +54,10 @@
     "pug": "^2.0.4",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
+    "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^4.3.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.7.2",
-    "uglify-js": "^3.3.27",
-    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   },
