--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -6,19 +6,21 @@
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run-p build:dev deploy server",
+    "start": "run-p build:dev deploy:dev server",
     "version_up:patch": "npm version patch && npm run build",
     "version_up:minor": "npm version minor && npm run build",
     "version_up:major": "npm version major && npm run build",
     "build": "npm-run-all clean build:prod",
     "build:prod": "webpack --config webpack.config.prod.ts",
     "build:dev": "webpack -w",
-    "deploy": "shx mkdir -p lib && npm-run-all deploy:*",
-    "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
-    "deploy:html": "ts-node ./debug/make-debug-pages",
-    "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
-    "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
-    "deploy:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "deploy:prod": "shx mkdir -p lib && run-p deploy:common:* deploy:prod:*",
+    "deploy:dev": "shx mkdir -p lib && run-p deploy:common:* deploy:dev:*",
+    "deploy:common:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
+    "deploy:common:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
+    "deploy:common:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
+    "deploy:common:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/ && shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "deploy:prod:html": "ts-node ./debug/make-debug-pages",
+    "deploy:dev:html": "ts-node ./debug/make-debug-pages dev",
     "clean": "shx rm -rf lib",
     "server": "node ./launch-server lib",
     "prepare": "npm run build"
