--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@wwawing/loader",
-  "version": "3.3.1",
+  "version": "3.4.0",
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
-  "sideEffects": ["./**/*.html", "./**/*.dat"],
+  "sideEffects": [
+    "./**/*.html",
+    "./**/*.dat"
+  ],
   "files": [
     "./lib"
   ],
@@ -32,10 +35,10 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "dependencies": {
-    "@wwawing/event-emitter": "3.3.1"
+    "@wwawing/event-emitter": "^3.4.0"
   },
   "devDependencies": {
-    "@wwawing/common-interface": "^3.3.1",
+    "@wwawing/common-interface": "^3.4.0",
     "cross-env": "^7.0.2",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.4",
