fix(loader): 生成物が含まれていなかったので修正

--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -9,7 +9,7 @@
     "./**/*.dat"
   ],
   "files": [
-    "./lib"
+    "lib"
   ],
   "scripts": {
     "start": "run-p watch:* start:deploy server",
