build(create-pr): sitesの自動PR生成

--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "make-zip": "npm run clean && ts-node ./scripts",
-    "upload-zip": "ts-node ./scripts/release",
+    "upload-zip": "ts-node ./scripts/upload-zip",
+    "create-pr": "ts-node ./scripts/create-pr",
     "clean": "shx rm -rf dist",
     "prepare": "npm run make-zip"
   },
