--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
-    "@types/crypto-js": "^3.1.43",
+    "@types/crypto-js": "^4.0.1",
     "@types/pug": "^2.0.4",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.39.1",
@@ -51,15 +51,15 @@
     "@wwawing/loader": "^3.5.7",
     "@wwawing/page-generator": "^3.5.7",
     "@wwawing/styles": "^3.5.7",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "pug": "^3.0.1",
-    "shelljs": "^0.8.3",
-    "shx": "^0.3.2",
+    "pug": "^3.0.2",
+    "shelljs": "^0.8.4",
+    "shx": "^0.3.3",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^4.3.0",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.7.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   },
