--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@wwawing/wwawing",
   "version": "0.0.0",
   "description": "",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "npm run bootstrap",
