--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -3,6 +3,7 @@
   "version": "3.5.7",
   "description": "wwawing debug server",
   "main": "lib/index.js",
+  "files": ["bin", "lib"],
   "scripts": {
     "start": "npm run build && node lib debug",
     "build": "tsc -p .",
