--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -3,6 +3,7 @@
   "version": "3.5.7",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
+  "files": ["debug", "lib"],
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
