--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "npm-run-all": "^4.1.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": ">=14.15.3",
+    "npm": ">=6.14.13"
   }
 }
