--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -37,5 +37,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=14.15.3",
+    "npm": ">=6.14.13"
   }
 }
