--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "sideEffects": false,
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
@@ -16,5 +19,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=14.15.3",
+    "npm": ">=6.14.13"
   }
 }
