--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -66,5 +66,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=14.15.3",
+    "npm": ">=6.14.13"
   }
 }
