--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -54,5 +54,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=14.15.3",
+    "npm": ">=6.14.13"
   }
 }
