--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -3,6 +3,7 @@
   "version": "3.5.8",
   "description": "",
   "sideEffects": false,
+  "type": "module",
   "main": "lib/index.js",
   "files": [
     "lib"
