--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -7,6 +7,7 @@
   ],
   "main": "lib/index.js",
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
