--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@wwawing/debug-server",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.0",
   "description": "wwawing debug server",
   "main": "lib/index.js",
-  "files": ["bin", "lib"],
+  "files": [
+    "bin",
+    "lib"
+  ],
   "scripts": {
     "start": "npm run build && node lib debug",
     "build": "tsc -p .",
