--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -3,24 +3,29 @@
   "version": "3.5.8",
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/index.js",
+  "module": "./module/index.js",
   "typings": "./lib/index.d.ts",
   "sideEffects": [
     "./**/*.html",
     "./**/*.dat"
   ],
   "files": [
-    "lib"
+    "lib",
+    "module"
   ],
   "scripts": {
-    "start": "run-p watch:* start:deploy server",
-    "start:deploy": "shx mkdir -p lib && shx cp -R resources/* lib",
+    "start": "run-s debug",
     "test": "echo \"no test specified\"",
-    "debug": "run-s clean:debug build:debug server",
-    "server": "http-server ./debug -o",
-    "build": "npm run clean:lib && tsc",
-    "build:debug": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack && shx cp ./src/___debug-resources___/wwamap.dat ./debug",
+    "debug": "run-s debug:clean debug:build debug:server",
+    "debug:clean": "run-s clean:debug",
+    "debug:build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack && shx cp ./src/___debug-resources___/wwamap.dat ./debug",
+    "debug:server": "http-server ./debug -o",
+    "build": "run-p build:*",
+    "build:lib": "npm run clean:lib && tsc -p .",
+    "build:module": "npm run clean:module && tsc -p ./tsconfig.module.json",
     "clean": "run-p clean:*",
     "clean:lib": "shx rm -rf lib",
+    "clean:module": "shx rm -rf module",
     "clean:debug": "shx rm -rf debug",
     "prepare": "npm run build"
   },
