--- a/packages/page-generator/package.json
+++ b/packages/page-generator/package.json
@@ -6,12 +6,18 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && shx cp ./src/wwa.pug ./lib/wwa.pug",
     "start": "npm run build && shx mkdir -p output && node debug/debug.js",
+    "build": "run-p build:*",
+    "build:lib": "tsc && shx cp ./src/wwa.pug ./lib/wwa.pug",
+    "build:module": "tsc -p ./tsconfig.module.json && shx cp ./src/wwa.pug ./module/wwa.pug",
+    "clean": "run-s clean:*",
+    "clean:lib": "shx rm -rf ./lib",
+    "clean:module": "shx rm -rf ./module",
     "prepare": "npm run build"
   },
   "files": [
     "lib",
+    "module",
     "template",
     "config"
   ],
@@ -24,6 +30,7 @@
     "@types/node": "^12.12.6",
     "@types/pug": "^2.0.4",
     "pug-cli": "^1.0.0-alpha6",
+    "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
     "typescript": "^4.2.4"
