--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.1",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
-  "files": ["debug", "lib"],
+  "files": [
+    "debug",
+    "lib"
+  ],
   "sideEffects": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -42,13 +45,13 @@
     "@types/pug": "^2.0.4",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^5.28.0",
-    "@wwawing/assets": "^3.5.8",
-    "@wwawing/common-interface": "^3.5.8",
-    "@wwawing/debug-server": "^3.5.8",
-    "@wwawing/event-emitter": "^3.5.8",
-    "@wwawing/loader": "^3.5.8",
-    "@wwawing/page-generator": "^3.5.8",
-    "@wwawing/styles": "^3.5.8",
+    "@wwawing/assets": "^3.5.9-module-test.1",
+    "@wwawing/common-interface": "^3.5.9-module-test.1",
+    "@wwawing/debug-server": "^3.5.9-module-test.1",
+    "@wwawing/event-emitter": "^3.5.9-module-test.1",
+    "@wwawing/loader": "^3.5.9-module-test.1",
+    "@wwawing/page-generator": "^3.5.9-module-test.1",
+    "@wwawing/styles": "^3.5.9-module-test.1",
     "crypto-js": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
