--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/assets",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.1",
   "description": "WWA Wing asset files",
   "main": "index.js",
   "files": [
