--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/common-interface",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.1",
   "description": "",
   "sideEffects": false,
   "main": "lib/index.js",
