--- a/packages/event-emitter/package.json
+++ b/packages/event-emitter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/event-emitter",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.1",
   "description": "nodeでもモダンブラウザでもIE11でも使えるすごいEventEmitter",
   "files": [
     "lib",
@@ -23,10 +23,10 @@
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.2.4",
+    "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
-    "npm-run-all": "^4.1.5"
+    "typescript": "^4.2.4"
   },
   "publishConfig": {
     "access": "public"
