--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/loader",
-  "version": "3.5.8",
+  "version": "3.5.9-module-test.1",
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/index.js",
   "module": "./module/index.js",
@@ -40,10 +40,10 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "dependencies": {
-    "@wwawing/event-emitter": "^3.5.8"
+    "@wwawing/event-emitter": "^3.5.9-module-test.1"
   },
   "devDependencies": {
-    "@wwawing/common-interface": "^3.5.8",
+    "@wwawing/common-interface": "^3.5.9-module-test.1",
     "cross-env": "^7.0.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
