--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -40,7 +40,8 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "dependencies": {
-    "@wwawing/event-emitter": "^3.5.9"
+    "@wwawing/event-emitter": "^3.5.9",
+    "axios": "0.21.1"
   },
   "devDependencies": {
     "@wwawing/common-interface": "^3.5.9",
