--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -21,7 +21,7 @@
     "@types/express": "4.17.11",
     "@types/node": "^12.12.6",
     "express": "^4.17.1",
-    "nexe": "^3.3.3",
+    "nexe": "^4.0.0-beta.18",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3",
     "typescript": "^4.2.4"
