--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.5.11-loader-node-impl.0",
+  "version": "3.5.10",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "./lib/wwa.js",
   "files": [
@@ -49,7 +49,7 @@
     "@wwawing/common-interface": "^3.5.9",
     "@wwawing/debug-server": "^3.5.10",
     "@wwawing/event-emitter": "^3.5.9",
-    "@wwawing/loader": "^3.5.11-loader-node-impl.0",
+    "@wwawing/loader": "^3.5.9",
     "@wwawing/page-generator": "^3.5.9",
     "@wwawing/styles": "^3.5.9",
     "crypto-js": "^4.0.0",
