--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
         run: "npm install"
       
       - name: "publish"
-        run: "npm run publish:all -- ${{ github.event.inputs.version }} --dist-tag ${{ github.event.inputs.tag }}"
+        run: "npm run publish:all -- ${{ github.event.inputs.version }} --dist-tag ${{ github.event.inputs.tag }} --yes"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
